--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -27,6 +27,28 @@
 	</div>
 	<% end %>
 </div>
+<!--modalopml-->
+
+<div id="modalrss" class="modal hide fade">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+			&times;
+		</button>
+		<h3><%= raw t 'newmodal.sources.rss.yourrss' %></h3>
+	</div>
+	<div class="modal-body importOpml">
+		<div class="row-fluid">
+		</div>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">
+			<%= t("source.rss.button.addall")%>
+		</button>
+		<button class="btn" data-dismiss="modal" aria-hidden="true">
+			<%= t("source.opml.button.cancel")%>
+		</button>
+	</div>
+</div>
 <form action="/searches" method="POST" id="formModal">
 	<div class="row-fluid">
 		<div class="span1"></div>
@@ -162,7 +184,7 @@
 										<div class="row-fluid">
 											<div class="span1"></div>
 											<div class="span3">
-												<button class="btn btn-primary span12" type="button" disabled>
+												<button href="#modalrss" class="btn btn-primary span12" type="button" data-toggle="modal">
 													<%= raw t 'newmodal.sources.rss.yourrss' %>
 												</button>
 											</div>
