--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -28,56 +28,6 @@
 	<% end %>
 </div>
 <!--modalopml-->
-
-<div id="modalrss" class="modal hide fade">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-			&times;
-		</button>
-		<h3><%= raw t 'newmodal.sources.rss.yourrss' %></h3>
-	</div>
-	<div class="modal-body importOpml">
-		<div class="row-fluid">
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Thème</th>
-						<th>URL</th>
-						<th>Libellé</th>
-						<th>Action</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% if user_signed_in?
-					@sources = current_user.getSources
-					@sources.each do |source| %>
-					<% next if source == nil  %>
-					<% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
-					<% uriNumber = filters_getNumber_path(:old => [filter]) %>
-					<tr>
-						<td><%= source.theme %></td>
-						<td><%= source.uri%></td>
-						<td><%= source.label %></td>
-						<td>
-							<button class="btn btn-success span12">
-								Ajouter
-							</button>
-						</td>
-					</tr>
-					<% end end %>
-				</tbody>
-			</table>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">
-			<%= t("source.rss.button.addall")%>
-		</button>
-		<button class="btn" data-dismiss="modal" aria-hidden="true">
-			<%= t("source.opml.button.cancel")%>
-		</button>
-	</div>
-</div>
 <form action="/searches" method="POST" id="formModal">
 	<div class="row-fluid">
 		<div class="span1"></div>
@@ -213,8 +163,8 @@
 										<div class="row-fluid">
 											<div class="span1"></div>
 											<div class="span3">
-												<button href="#modalrss" class="btn btn-primary span12" type="button" data-toggle="modal" <%= if !user_signed_in?
-                        "disabled" end%>>
+												<button href="#modalrss" class="btn btn-primary span12" type="button" data-toggle="modal" onclick="showImportRss()" <%= if !user_signed_in? 
+													"disabled" end%>>
 													<%= raw t 'newmodal.sources.rss.yourrss' %>
 												</button>
 											</div>
@@ -230,8 +180,36 @@
 												</button>
 											</div>
 										</div>
+										<div class="row-fluid importRss" hidden>
+											<table class="table table-striped table-bordered">
+												<thead>
+													<tr>
+														<th>Thème</th>
+														<th>URL</th>
+														<th>Libellé</th>
+														<th>Action</th>
+													</tr>
+												</thead>
+												<tbody>
+													<% if user_signed_in?
+													@sources = current_user.getSources
+													@sources.each do |source| %>
+													<tr>
+														<td><%= source.theme %></td>
+														<td><%= source.uri%></td>
+														<td><%= source.label %></td>
+														<td>
+														<button class="btn btn-success span12">
+															Ajouter
+														</button></td>
+													</tr>
+													<% end %>
+													<% end %>
+												</tbody>
+											</table>
+										</div>
 									</div>
-									<!--formContent twitter-->
+									<!--formContent rss-->
 								</div>
 							</div>
 						</div>
