--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -162,19 +162,13 @@
 										</div>
 										<div class="row-fluid">
 											<div class="span1"></div>
-											<div class="span3">
+											<div class="span4">
 												<button class="btn btn-primary span12" type="button" onclick="showImportRss()" <%= if !user_signed_in? 
 													"disabled" end%>>
 													<%= raw t 'newmodal.sources.rss.yourrss' %>
 												</button>
 											</div>
-											<div class="span4">
-												<div class="span1"></div>
-												<button id="addAllRSS" class="btn btn-info span10" type="button" onclick="addAllSource('RSS','<%= raw t 'newmodal.sources.rss.all' %>');return false;">
-													<%= raw t 'newmodal.sources.rss.all' %>
-												</button>
-											</div>
-											<div class="span3">
+											<div class="span4 offset2">
 												<button href="#modalopml" class="btn btn-danger span12" type="button" data-toggle="modal">
 													<%= raw t 'newmodal.sources.rss.opml' %>
 												</button>
