[#54426914] infox box are now working

--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -88,7 +88,9 @@
                             <%= linkval %>
                         </div>
                       <div class="btn-group btn-group-label">
-                        <%= link_to 'get Info Box', filter , :class =>"label"%><!-- TODO: code it! -->
+                        <% if filter.uri != nil && filter.uri.start_with?("http://www.dbpe") %>
+                            <%= link_to 'get Info Box', search_filters_path(:uri => filter.uri ) , :class =>"label"%><!-- TODO: code it! -->
+                        <%end%>
                       </div>
                     <%end%>
                 <%end%>
