--- a/ZONE-watcher/app/views/searches/_form.html.erb
+++ b/ZONE-watcher/app/views/searches/_form.html.erb
@@ -175,7 +175,7 @@
 											</div>
 										</div>
 										<div class="row-fluid importRss" hidden>
-											<table class="table table-striped table-bordered">
+											<table class="table table-striped">
 												<thead>
 													<tr>
 														<th>Thème</th>
@@ -189,11 +189,11 @@
 														@sources = current_user.getSources
 														@sources.each do |source| %>
 															<tr>
-																<td><%= source.theme %></td>
-																<td><%= source.uri%></td>
-																<td><%= source.label %></td>
-																<td>
-																<button class="btn btn-success span12" type="button" onclick="addPersonnalRss('<%= source.uri%>')">
+																<td class="span2"><%= source.theme %></td>
+																<td class="span5"><%= source.uri%></td>
+																<td class="span3"><%= source.label %></td>
+																<td class="span2">
+																<button class="btn btn-success" type="button" onclick="addPersonnalRss('<%= source.uri%>')">
 																	Ajouter
 																</button></td>
 															</tr>
