--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -18,7 +18,7 @@
     });
 <% end %>
 
-<div id="modalTag" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="modalDeleteTag" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="myModalLabel"><%= raw t 'items.modal.title' %></h3>
