--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -21,18 +21,36 @@
 <div id="modalDeleteTag" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel"><%= raw t 'items.modal.title' %></h3>
+    <h3 id="myModalLabel"><%= raw t 'items.modal.delete.title' %></h3>
   </div>
   <div class="modal-body deleteTag">
   	<div class="row-fluid">
 	    <div class="span12">
-	    	<%= raw t 'items.modal.content' %>
+	    	<%= raw t 'items.modal.delete.content' %>
 	    </div>
     </div>
   </div>
   <div class="modal-footer">
-  	<button class="btn btn-success"><%= raw t 'items.modal.delete' %></button>
-    <button class="btn" data-dismiss="modal" aria-hidden="true"><%= raw t 'items.modal.cancel' %></button>
+  	<button class="btn btn-success"><%= raw t 'items.modal.delete.delete' %></button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true"><%= raw t 'items.modal.delete.cancel' %></button>
+  </div>
+</div>
+
+<div id="modalEditTag" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel"><%= raw t 'items.modal.edit.title' %></h3>
+  </div>
+  <div class="modal-body deleteTag">
+  	<div class="row-fluid">
+	    <div class="span12">
+	    	<%= raw t 'items.modal.edit.content' %>
+	    </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+  	<button class="btn btn-success"><%= raw t 'items.modal.edit.update' %></button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true"><%= raw t 'items.modal.edit.cancel' %></button>
   </div>
 </div>
 
