--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -45,6 +45,7 @@
   	<div class="row-fluid">
 	    <div class="span12">
 	    	<%= raw t 'items.modal.edit.content' %>
+	    	<input id="inputEditTag" name="tagName" type="text" placeholder="">
 	    </div>
     </div>
   </div>
