Update the infobox panel

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -247,3 +247,22 @@ a.label:visited{
   padding: 9px 15px;
 }
 
+.popover-text {
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.popover-content{
+  padding: 0 2px 0 2px;
+}
+
+.popover-content>p{
+  margin-bottom : 0;
+}
+
+.popover-content>p>hr{
+  margin-top : 0;
+}
+.adding-info{
+  text-align: center;
+}
