--- a/ZONE-watcher/app/views/search_filters/index.html.erb
+++ b/ZONE-watcher/app/views/search_filters/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row-fluid rowContentTag">
 	<div class="span12">
-		<%= image_tag @infos[:thumbnail], :class => "pull-left span5", :id => "imgtag"%>
+		<% if @infos[:thumbnail] != nil%>
+			<%= image_tag @infos[:thumbnail], :class => "pull-left span5", :id => "imgtag"%>
+		<%end		%>
+		
 		<span class="textContent">
 			<%= @infos[:abstract]%>
 		</span>
