First implementation of the user's sources panel

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -255,3 +255,19 @@ span.label-wrap{
 /**
  *   End of filtering section
  */
+
+/**
+ *   Source users section
+ */
+
+a.accordion-toggle:hover{
+  background : none;
+  color : black;
+}
+
+.accordion-group{
+  border:none;
+}
+/**
+ *   End of source users section
+ */
