--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -263,6 +263,7 @@ span.label-wrap{
 a.accordion-toggle:hover{
   background : none;
   color : black;
+  text-decoration: none;
 }
 
 .accordion-group{
