--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -1,7 +1,11 @@
 <div class="accordion" id="accordion2">
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNew"> <%= t("source.new")%> </a>
+			<h2>
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNew">
+					<i class="icon-expand"></i> <%= t("source.new")%>
+				</a>
+			</h2>
 		</div>
 		<div id="collapseNew" class="accordion-body collapse">
 			<div class="accordion-inner">
@@ -11,11 +15,15 @@
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOpml"> <%= t("source.opml.title")%> </a>
+			<h2>
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOpml">
+					<i class="icon-expand"></i> <%= t("source.opml.title")%>
+				</a>
+			</h2>
 		</div>
 		<div id="collapseOpml" class="accordion-body collapse">
 			<div class="accordion-inner">
-				<h1><%= t("source.opml.title")%></h1>
+				<h2><%= t("source.opml.title")%></h2>
 				<%= form_for(:upload, :url => { :action => "uploadopml" }, :html => { :multipart => true }, :remote => true) do |form| %>
 				<p>
 					<%= form.label 'datafile' %>
@@ -28,17 +36,25 @@
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseGroups"> <%= t("source.groups.title")%> </a>
+			<h2>
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseGroups">
+					<i class="icon-expand"></i> <%= t("source.groups.title")%>
+				</a>
+			</h2>
 		</div>
 		<div id="collapseGroups" class="accordion-body collapse">
 			<div class="accordion-inner">
-				<h1> Not yet implemented</h1>
+				<h3> Not yet implemented</h3>
 			</div>
 		</div>
 	</div>
 	<div class="accordion-group">
 		<div class="accordion-heading">
-			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseAll"> <%= t("source.your")%> </a>
+			<h2>
+				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseAll">
+					<i class="icon-collapse"></i> <%= t("source.your")%>
+				</a>
+			</h2>
 		</div>
 		<div id="collapseAll" class="accordion-body collapse in">
 			<div class="accordion-inner">
