Finished the new source section

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -269,6 +269,10 @@ a.accordion-toggle:hover{
 .accordion-group{
   border:none;
 }
+
+.accordion-inner{
+  border-top : none;
+}
 /**
  *   End of source users section
  */
