--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="accordion-heading">
 			<h2>
 				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNew">
-					<i class="icon-expand"></i> <%= t("source.new")%>
+					<i class="icon-expand"></i> <%= t("source.new.title")%>
 				</a>
 			</h2>
 		</div>
@@ -52,7 +52,7 @@
 		<div class="accordion-heading">
 			<h2>
 				<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseAll">
-					<i class="icon-collapse"></i> <%= t("source.your")%>
+					<i class="icon-collapse"></i> <%= t("source.your.title")%>
 				</a>
 			</h2>
 		</div>
