First implementation of your sources pannel

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -273,6 +273,15 @@ a.accordion-toggle:hover{
 .accordion-inner{
   border-top : none;
 }
+
+.table td.text-center{
+  text-align : center;
+}
+
+td a:hover, td a:visited{
+  background:none;
+  color:black;
+}
 /**
  *   End of source users section
  */
