--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -50,30 +50,32 @@
 		</div>
 		<div id="collapseAll" class="accordion-body collapse in">
 			<div class="accordion-inner">
-				<table>
-					<tr>
-						<th><%= t("source.list.uri")%></th>
-						<th><%= t("source.list.num")%></th>
-						<th><%= t("source.list.label")%></th>
-						<th><%= t("source.list.lang")%></th>
-						<th><%= t("source.list.owner")%></th>
-						<th><%= t("source.list.theme")%></th>
-					</tr>
-
-					<% @sources.each do |source| %>
-					<% next if source == nil  %>
-					<% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
-					<% uriNumber = filters_getNumber_path(:old => [filter]) %>
-					<tr>
-						<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
-						<td> ( <span class="number_items_wait"> <a href="<%= uriNumber%>"> <i class="number_items_wait icon-refresh" data-url="<%= uriNumber%>" sourceId="<%= source%>" ></i> </a> </span><span class='number_items_container' sourceId="<%= source%>"  data-url="<%= uriNumber%>" ></span> <%= t("source.elemsNumber")%>) </td>
-						<td><%= source.label %></td>
-						<td><%= source.lang %></td>
-						<td><%= source.owner %></td>
-						<td><%= source.theme %></td>
-						<td><span class="btn-group"> <%= link_to "edit",edit_source_path(source) , :class => 'btn btn-warning btn'  %> <a class="btn btn-danger btn" href="/sources/<%= source.to_param%>/delete"><%= t("delete") %></a> </span></td>
-					</tr>
-					<% end %>
+				<table class="table table-bordered table-striped">
+					<thead>
+						<tr>
+							<th class="span1"><%= t("source.list.action")%></th>
+							<th class="span3"><%= t("source.list.label")%></th>
+							<th class="span5"><%= t("source.list.uri")%></th>
+							<th class="span1"><%= t("source.list.lang")%></th>
+							<th class="span2"><%= t("source.list.theme")%></th>
+						</tr>
+					</thead>
+					<tbody>
+						<% @sources.each do |source| %>
+						<% next if source == nil  %>
+						<% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
+						<% uriNumber = filters_getNumber_path(:old => [filter]) %>
+						<tr>
+							<td class="text-center"><%= link_to "",edit_source_path(source) , :class => 'icon-edit'  %> <a href="/sources/<%= source.to_param%>/delete"><i class="icon-trash"></i></a></td>
+							<td><%= source.label %></td>
+							<td><%= link_to source.uri, url_for(:controller => :searches, :action => :create,  :sources => {:rss => [source.uri]}), :method => "post" %></td>
+							<!--<td> ( <span class="number_items_wait"> <a href="<%= uriNumber%>"> <i class="number_items_wait icon-refresh" data-url="<%= uriNumber%>" sourceId="<%= source%>" ></i> </a> </span><span class='number_items_container' sourceId="<%= source%>"  data-url="<%= uriNumber%>" ></span> <%= t("source.elemsNumber")%>) </td>
+							-->
+							<td class="text-center"><%= source.lang.upcase %></td>
+							<td><%= source.theme %></td>
+						</tr>
+						<% end %>
+					</tbody>
 				</table>
 			</div>
 		</div>
