Changed the add button for new source

--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -40,8 +40,8 @@
       </div>
     </div>
     <div class="control-group">
-    	<div class="controls span6 offset4">
-        <%= f.submit t("source.new.add"), :class => 'btn btn-success pull-right' %>
+    	<div class="controls span2 offset4">
+        <%= f.submit t("source.new.add"), :class => 'btn btn-success span12' %>
       </div>
    	 
    	</div>
