--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -17,17 +17,17 @@
 			<div class="accordion-inner">
 				<%= form_for(:upload, :url => { :action => "uploadopml" }, :html => { :multipart => true }, :remote => true) do |form| %>
 				<div class="row-fluid">
-					<div class="span4">
+					<div class="span3 offset1">
 						<input id="upload_datafile" name="upload[datafile]" type="file" hidden onchange="updateFilename($(this).val())">
-						<button class="btn btn-info span6 offset6" onclick="$('#upload_datafile').click();return false;">
+						<button class="btn btn-info span12" onclick="$('#upload_datafile').click();return false;">
 							<%= t("source.opml.button.select")%>
 						</button>
 					</div>
-					<div class="span5">
+					<div class="span4">
 						<span id="fileTextName" data-initial="<%= t("source.opml.empty")%>"><%= t("source.opml.empty")%></span>
 					</div>
-					<div class="span1">
-						<%= form.submit t("source.opml.button.upload"),:class => 'btn btn-success pull-right'%>
+					<div class="span2">
+						<%= form.submit t("source.opml.button.upload"),:class => 'btn btn-success span12'%>
 					</div>
 				</div>
 				<% end %>
